LDEV-5385 Allow real numbers in Scratchie marks